# wspr-mcp

./: LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
src/wspr_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_live.py  test_security.py  test_tools.py
